--- a/style.css
+++ b/style.css
@@ -1,23 +1,65 @@
-table{
-    border: 0px;
-    background-image: linear-gradient(rgb(120, 120, 233), darkmagenta, rgb(35, 170, 228));
-    color: white;
-    text-align: center;  
-    border-radius: 20px;
-    width: 90%;
-    padding: 100px 95px;
-    
+*{
+    margin: 0;
+    padding: 0;
+    outline: none;
+    box-sizing: border-box;
 }
-th{
-    font-size: 30px;
-    background-color: darkorchid;   
+body{
+    font-family: montserrate;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: linear-gradient(#9cebfc,#6ae1fb);
 }
-th:hover{
-    color:rgb(221, 149, 221)
+.center{
+    width: 350px;
+    background: salmon;
+    border-radius: 30px;
 }
-.log{
-    line-height: 50px;
+input[type="text"]{
+    height: 60px;
+    width: 300px;
+    margin-top: 30px;
+    border-radius: 1px;
+    border: 1px solid #e1e7ea;
+    color: black;
+    font-size: 22px;
+    font-weight: bold;
+    text-align: right;
+    padding-right: 20px;
+    background: linear-gradient(#d1dce0,#dfe6e9);
 }
-.log:hover{
-    color: rgb(177, 135, 207)
+form.button{
+    width: 300px;
+    margin: 10px 25px 0 25px;
+    padding: 10px 0;
 }
+input[type="button"]{
+    width: 58px;
+    height: 55px;
+    margin: 5px;
+    font-size: 22px;
+    line-height: 55px;
+    border-radius: 3px;
+    border: 1px solid #d9d9d9;
+    background: linear-gradient(#d9d9d9,#bfbfbf)}
+    input[type="button"]:hover{
+        transition: .5s;
+        color: palegreen;
+    background: goldenrod}
+    input#clear{
+        background: red;
+        border: 1px solid #cc000c;
+        color: white;
+
+    }
+    input#equal{
+        width: 275px;
+        margin: 10px 0 10px 0;
+        font-size: 30px;
+        color: white;
+        background-color: green;
+        border: 1px solid #b32a00
+    }
